Added Reddit & Discord links. Added favicon. Replaced logo png with svg.

--- a/hellbreaker/index.html
+++ b/hellbreaker/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Hellbreaker</title>
+		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
@@ -15,21 +16,41 @@
 			<h2>Run. Dodge. Kill.</h2>
 			<br>
 			<div>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/eLEoZKYZiPw" frameborder="0" allowfullscreen></iframe>
+				<iframe width="600" height="338" src="https://www.youtube.com/embed/eLEoZKYZiPw" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<br>
-			<h2 class="text">Buy</h2>
+			<h2 class="text">Get It</h2>
 			<div>
-				<iframe frameborder="0" src="https://itch.io/embed/169248?bg_color=151515&amp;fg_color=ffffff&amp;border_color=202020" width="560" height="170"></iframe>
+				<iframe frameborder="0" src="https://itch.io/embed/169248?bg_color=151515&amp;fg_color=ffffff&amp;border_color=202020" width="600" height="170"></iframe>
 			</div>
 			<br>
 			<h2 class="text">Follow</h2>
-			<div class="centered">
-				<a target="_blank" href="https://twitter.com/enhex">
-					<img class="link" src="../svg/twitter.svg" title="Twitter" alt="Twitter">
-				</a>
-				<a target="_blank" href="https://www.facebook.com/Hellbreaker-771298816407948/">
-					<img class="link" src="../svg/facebook.svg" title="Facebook" alt="Facebook">
+			<div class="centered even-spacing row">
+				<span class="link">
+					<a target="_blank" href="https://twitter.com/enhex">
+						<img src="../svg/twitter.svg" title="Twitter" alt="Twitter">
+					</a>
+				</span>
+				<span class="link">
+					<a target="_blank" href="https://www.facebook.com/Hellbreaker-771298816407948/">
+						<img src="../svg/facebook.svg" title="Facebook" alt="Facebook">
+					</a>
+				</span>
+				<span class="link">
+					<a target="_blank" href="https://discord.gg/VNr5dUQ">
+						<img src="../svg/discord.svg" title="Discord" alt="Discord">
+					</a>
+				</span>
+				<span class="link">
+					<a target="_blank" href="https://www.reddit.com/r/Hellbreaker/">
+						<img src="../svg/reddit.svg" title="Reddit" alt="Reddit">
+					</a>
+				</span>
+			</div>
+			
+			<div id="virhex" class="centered">
+				<a href="../">
+					<img src="../logo.svg" alt="Virhex">
 				</a>
 			</div>
 		</div>
