--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<div class="centered">
 			<div id="title">
-				<img src="title.png" alt="Virhex"/>
+				<img src="logo.svg" alt="Virhex"/>
 			</div>
 			
 			<div id="projects">
