--- a/hellbreaker/index.html
+++ b/hellbreaker/index.html
@@ -10,20 +10,29 @@
 		<script src="../analyticstracking.js"></script>
 		
 		<div class="centered">
-			<h1 id="title">
+			<h1 id="title" class="centered">
 				<img src="title.png" alt="Hellbreaker"/>
 			</h1>
 			<h2>Run. Dodge. Kill.</h2>
 			<br>
+			
 			<div>
-				<iframe width="600" height="338" src="https://www.youtube.com/embed/eLEoZKYZiPw" frameborder="0" allowfullscreen></iframe>
+				<iframe width="600" height="337" src="https://www.youtube.com/embed/eLEoZKYZiPw" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<div class="centered even-spacing row">
+			<a target="_blank" href="image/Hellbreaker1.jpg"><img class="preview_img" src="image/Hellbreaker1.jpg"></a>
+			<a target="_blank" href="image/Hellbreaker2.jpg"><img class="preview_img" src="image/Hellbreaker2.jpg"></a>
+			<a target="_blank" href="image/Hellbreaker3.jpg"><img class="preview_img" src="image/Hellbreaker3.jpg"></a>
+			<a target="_blank" href="image/LevelEditor.jpg"><img class="preview_img" src="image/LevelEditor.jpg"></a>
 			</div>
 			<br>
+			
 			<h2 class="text">Get It</h2>
 			<div>
-				<iframe frameborder="0" src="https://itch.io/embed/169248?bg_color=151515&amp;fg_color=ffffff&amp;border_color=202020" width="600" height="170"></iframe>
+				<iframe frameborder="0" src="https://itch.io/embed/169248?bg_color=151515&amp;fg_color=ffffff&amp;border_color=202020" width="600" height="167"></iframe>
 			</div>
 			<br>
+			
 			<h2 class="text">Follow</h2>
 			<div class="centered even-spacing row">
 				<span class="link">
