Added meta tags and short description.

--- a/hellbreaker/index.html
+++ b/hellbreaker/index.html
@@ -4,6 +4,9 @@
 		<title>Hellbreaker</title>
 		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="style.css">
+        
+        <meta name="description" content="Fast paced First Person Shooter. Run. Dodge. Kill.">
+        <meta name="keywords" content="Game, FPS, 3D, Doom, Quake, Shooter, Mod, Modding, Level Editor, Video Game, Old School, Urho3D">
 	</head>
 
 	<body>
@@ -13,7 +16,9 @@
 			<h1 id="title" class="centered">
 				<img src="title.png" alt="Hellbreaker"/>
 			</h1>
-			<h2>Run. Dodge. Kill.</h2>
+			<h2>Run. Dodge. Kill.</h2><br>
+            Fast paced first person shooter.<br>
+            comes with modding support.
 			<br>
 			
 			<div>
