--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ layout: default
 
 <div id="projects">
     <div class="project">
-        <a href="./hellbreaker"><img src="hellbreaker/title.png"/></a>
+        <a href="virhex.com/hellbreaker"><img src="hellbreaker/title.png"/></a>
     </div>
 </div>
